# hsd_lima_unlocker

./: .gitignore  ANLEITUNG.md  LICENSE
.checkpoints/2026-04-04-pre-uid-offload/LiMa_Bridge/main/: main.c
.checkpoints/2026-04-04-pre-uid-offload/pn532_addr_bridge_esp32/main/: main.c
LiMa_Bridge/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
LiMa_Bridge/main/: CMakeLists.txt  idf_component.yml  main.c  main.c.bak_20260406_005722  server_cert.pem
LiMa_Bridge/main/fonts/: lv_font_montserrat_14.c  lv_font_montserrat_20.c  lv_font_montserrat_30.c
LiMa_Bridge/main/images/: hsd_logo.c
LiMa_Server/: README.md  lima_clients.db  lima_users.db  server.key  server.py
pn532_addr_bridge_esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
pn532_addr_bridge_esp32/main/: main.c
